// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- Browser Entry - Icon 1- jpeg icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-image"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      img
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 2- png icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-image"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      img
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 3- html icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-html"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      &lt;/&gt;
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 4- json icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-json"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      { }
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 5- javascript icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-js"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      js
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 6- css icon 1`] = `
<div
  className="entry-icon entry-icon-file icon-css"
>
  <div
    className="shape"
  >
    <div
      className="type-name"
    >
      css
    </div>
  </div>
</div>
`;

exports[`1- Browser Entry - Icon 7- unknown type icon 1`] = `
<div
  className="entry-icon entry-icon-file"
>
  <div
    className="shape"
  >
    
  </div>
</div>
`;

exports[`2- Browser Entry - Parent Folder 1- render 1`] = `
<div
  className="browser-entry entry-parent-folder"
  onClick={[Function]}
>
  <div
    className="entry-header"
  >
    <div
      className="entry-icon entry-icon-folder"
    >
      <div
        className="shapes"
      >
        <div
          className="shape1"
        />
        <div
          className="shape2"
        />
      </div>
    </div>
  </div>
  <div
    className="entry-name"
  >
    ..
  </div>
</div>
`;

exports[`3- Browser Entry - Folder 1- default render 1`] = `
<div
  className="browser-entry entry-folder"
  onClick={[Function]}
>
  <div
    className="entry-header"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="entry-icon entry-icon-folder"
    >
      <div
        className="shapes"
      >
        <div
          className="shape1"
        />
        <div
          className="shape2"
        />
      </div>
    </div>
  </div>
  <div
    className="entry-label"
  >
    bar
  </div>
</div>
`;

exports[`3- Browser Entry - Folder 2- checked 1`] = `
<div
  className="browser-entry entry-folder checked"
  onClick={[Function]}
>
  <div
    className="entry-header"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_ checked"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
      </div>
    </div>
    <div
      className="entry-icon entry-icon-folder"
    >
      <div
        className="shapes"
      >
        <div
          className="shape1"
        />
        <div
          className="shape2"
        />
      </div>
    </div>
  </div>
  <div
    className="entry-label"
  >
    bar
  </div>
</div>
`;

exports[`4- Browser Entry - File 1- default render 1`] = `
<div
  className="browser-entry entry-file"
>
  <div
    className="entry-header"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="entry-icon entry-icon-file icon-html"
    >
      <div
        className="shape"
      >
        <div
          className="type-name"
        >
          &lt;/&gt;
        </div>
      </div>
    </div>
  </div>
  <div
    className="entry-label"
  >
    index.html
  </div>
  <div
    className="h-space"
  />
  <div
    className="entry-size"
  >
    12.03 KB
  </div>
</div>
`;

exports[`4- Browser Entry - File 2- checked 1`] = `
<div
  className="browser-entry entry-file checked"
>
  <div
    className="entry-header"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_ checked"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
      </div>
    </div>
    <div
      className="entry-icon entry-icon-file icon-html"
    >
      <div
        className="shape"
      >
        <div
          className="type-name"
        >
          &lt;/&gt;
        </div>
      </div>
    </div>
  </div>
  <div
    className="entry-label"
  >
    index.html
  </div>
  <div
    className="h-space"
  />
  <div
    className="entry-size"
  >
    12.03 KB
  </div>
</div>
`;
